fixes color and alignment changes.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -237,7 +237,7 @@ body.noscroll {
     .image-style-align-right{
       float: right;
       width: 50%;
-      margin-right: 20px;
+      margin-left: 20px;
     }
     figure{
       margin: 0 0 30px;
